--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="exit_message">Aby opuścić aplikację kliknij jeszcze raz wstecz</string>
     <string name="header_of_exported_file">Id;Kod;KodPomocniczy;NazwaSkrocona;Nazwa;LokalizacjaStara;IloscPoczatkowa;IloscKoncowa;Przetworzona;Spisujacy;</string>
-    <string name="saving_file_info">Plik zostanie zapisany jako: Export_pozycje.csv</string>
     <string name="fill_value">Uzupełnij wartość</string>
     <string name="incorrect_file_format">Wybrany plik nie jest formatu csv!</string>
     <string name="saved">Zapisano</string>
-
+    <string name="start_new_inventory">Rozpocznij nowy spis</string>
+    <string name="continue_current_inventory">"Kontynuuj obecny spis"</string>
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
 
