--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">icmInventory</string>
+    <string name="app_name">icmInwentaryzacja Offline</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="exit_message">To leave the application, click again</string>
+    <string name="exit_message">Aby opuścić aplikację kliknij jeszcze raz wstecz</string>
     <string name="header_of_exported_file">Id;Kod;KodPomocniczy;NazwaSkrocona;Nazwa;LokalizacjaStara;IloscPoczatkowa;IloscKoncowa;Przetworzona;Spisujacy;</string>
-    <string name="fill_value">Complete the value!</string>
-    <string name="incorrect_file_format">The selected file is not csv!</string>
-    <string name="saved">Saved</string>
-    <string name="start_new_inventory">Start new inventory</string>
-    <string name="continue_current_inventory">Continue the current inventory</string>
+    <string name="fill_value">Uzupełnij wartość</string>
+    <string name="incorrect_file_format">Wybrany plik nie jest formatu csv!</string>
+    <string name="saved">Zapisano</string>
+    <string name="start_new_inventory">Rozpocznij nowy spis</string>
+    <string name="continue_current_inventory">"Kontynuuj obecny spis"</string>
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
 
