--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -1,20 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">icmInwentaryzacja Offline</string>
+    <string name="app_name">icmInventory</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="exit_message">Aby opuścić aplikację kliknij jeszcze raz wstecz</string>
     <string name="header_of_exported_file">Id;Kod;KodPomocniczy;NazwaSkrocona;Nazwa;LokalizacjaStara;IloscPoczatkowa;IloscKoncowa;Przetworzona;Spisujacy;</string>
-    <string name="fill_value">Uzupełnij wartość</string>
+    <string name="fill_value">Uzupełnij wartość!</string>
     <string name="incorrect_file_format">Wybrany plik nie jest formatu csv!</string>
     <string name="saved">Zapisano</string>
     <string name="start_new_inventory">Rozpocznij nowy spis</string>
     <string name="continue_current_inventory">"Kontynuuj obecny spis"</string>
+    <string name="login">Spisujący</string>
+    <string name="error_init_scanner">Błąd w inicjalizacji  Skanera:</string>
+    <string name="not_match">Nie znaleziono dopasowania</string>
+    <string name="error_unregistry_scanner">Błąd w trakcie wyrejestrowania Skanera:</string>
+    <string name="error_registry_scanner">Błąd w trakcie rejestracji Skanera:</string>
+    <string name="cant_release_scanner">Nie można zwolnić obiektu Skanera:</string>
+    <string name="item_code">kod towaru</string>
+    <string name="Unit">J. miary:</string>
+    <string name="save">Zapisz</string>
+    <string name="sum">Suma sztuk</string>
+    <string name="scan_code">Zeskanuj Kod</string>
+    <string name="scan_ean">Zeskanuj kod EAN</string>
+    <string name="name">Nazwa:</string>
+    <string name="scanned_amount">Ilość Zeskanowana:</string>
+    <string name="no_tem_for_code">Brak pozycji o takim kodzie. Utworzyć nową?</string>
+    <string name="amount">Ilosc:</string>
+    <string name="code">Kod:</string>
+    <string name="entry_list">Lista wejściowa</string>
+    <string name="scanned_list">Lista zeskanowanych pozycji</string>
+    <string name="change_location">Zmień lokalizację</string>
+    <string name="end_app">Zakończ</string>
+    <string name="Information">Informacje</string>
+    <string name="save_in_csv_file">Zapisz w pliku CSV</string>
+    <string name="choose_location">Wybierz lokalizację</string>
+    <string name="enter_name">Wpisz nazwę</string>
+    <string name="no">NIE</string>
+    <string name="yes">TAK</string>
+    <string name="enter_code">Wpisz kod</string>
+    <string name="saving_to_csv">Trwa zapis do pliku csv...</string>
+
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
-
     </string-array>
+
 </resources>
