--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -40,6 +40,7 @@
     <string name="yes">TAK</string>
     <string name="enter_code">Wpisz kod</string>
     <string name="saving_to_csv">Trwa zapis do pliku csv...</string>
+    <string name="incorrect_file">"  Plik jest niezgodny z wymaganiami"</string>
 
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
