Added icon for item row.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
     <string name="logout">Log out</string>
     <string name="scanning_items">Scanning items</string>
     <string name="location_already_exists">The location with this name already exists</string>
+    <string name="location">Location: \u0020</string>
+    <string name="handle">Recznie</string>
+    <string name="scanner">Skaner</string>
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
     </string-array>
