--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -45,7 +45,9 @@
     <string name="logout">Wyloguj</string>
     <string name="scanning_items">Skanowanie pozycji</string>
     <string name="location_already_exists">Już istnieje lokalizacja o tej nazwie</string>
-
+    <string name="location">Lokalizacja: \u0020</string>
+    <string name="handle">Handle</string>
+    <string name="scanner">Scanner</string>
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
     </string-array>
