Changed scan icon. Added option generate empty csv file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
         <item name="timeline">oś czasu</item>
     </string-array>
     <string name="empty_inventory">New inventory without data</string>
+    <string name="generate_empty_file_csv">Generate empty file CSV</string>
 </resources>
