--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -52,12 +52,12 @@
     <string name="enter_support_code">Wpisz kod pomocniczy</string>
     <string name="name_without_asterisk">Name:</string>
     <string name="support_code_without_asterisk">Kod 2:</string>
-    <string name="company_info">Producent: \n INCOME Sp. z o.o.\n  Al. J.Piłsudskiego 46 \n 33-300 Nowy Sącz \n Polska\n \n  income@income.pl \n \n Wszystkie informacja o aplikacji:\n  http://icmInventory.com</string>
+    <string name="company_info">Producent: \n INCOME Sp. z o.o.\n  Al. J.Piłsudskiego 46 \n 33-300 Nowy Sącz \n Polska\n \n  income@income.pl \n \n Wszystkie informacje o aplikacji:\n  http://icmInventory.com</string>
     <string name="back">Wstecz</string>
+    <string name="generate_empty_file_csv">Generuj pusty plik CSV</string>
+    <string name="empty_inventory">Nowy pusty spis</string>
+
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
     </string-array>
-    <string name="empty_inventory">Nowy pusty spis</string>
-
-
 </resources>
