--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="error_ocurred">Error occured:</string>
     <string name="do_you_want_remove_position">Are you sure you want to delete the item: \u0020</string>
     <string name="start_screen">Start screen</string>
+    <string name="scan_localization" translatable="false">Skanowanie lokalizacji</string>
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
     </string-array>
