--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -52,11 +52,12 @@
     <string name="enter_support_code">Wpisz kod pomocniczy</string>
     <string name="name_without_asterisk">Name:</string>
     <string name="support_code_without_asterisk">Kod 2:</string>
-    <string name="company_info">Producent: \n INCOME Sp. z o.o.\n  Al. J.Piłsudskiego 46 \n 33-300 Nowy Sącz \n Polska\n \n  income@income.pl \n \n Wszystkie informacje o aplikacji:</string>
+    <string name="company_info">Producent: \n icMobile Systems sp. z o.o.\n  Al. J.Piłsudskiego 46 \n 33-300 Nowy Sącz \n Polska\n \n icmobile@icmobile.pl \n \n Wszystkie informacje o aplikacji:</string>
     <string name="back">Wstecz</string>
     <string name="code_one_label">Kod: </string>
     <string name="code_two_label">Kod 2: </string>
-    <string name="generate_empty_file_csv">Generuj pusty plik CSV</string>
+    <string name="generate_empty_file_positions_csv">Generuj pusty plik pozycji CSV</string>
+    <string name="generate_empty_file_locations_csv">Generuj pusty plik lokalizacji CSV</string>
     <string name="empty_inventory">Nowy pusty spis</string>
     <string name="version_demo_not_save_file">Posiadasz wersję DEMO, która nie obsługuje zapisu danych do pliku. Zachęcamy do zakupu pełnej wersji aplikacji w Google Play.</string>
     <string name="go_to_google_play_link">https://play.google.com/store/apps/developer?id=Income+sp.+z+o.o."</string>
