--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="scan_localization" translatable="false">Skanowanie lokalizacji</string>
     <string name="assing_to_localization">Znaleziono pozycję nie przypisaną do obecnej lokalizacji. Czy przypisać do obecnej lokalizacji?</string>
     <string name="no_item_with__supplier_id_or_order_id">Brak pozycji o takim Id dostawcy lub Id zamówienia. Utworzyć nową?</string>
+    <string name="add_new_location">Zeskanowano nową lokalizację, czy chcesz ją dodać?</string>
+    <string name="exist_location">Zeskanowana lokalizacja istnieje, czy ją wybrać?</string>
     <string-array name="report_fragment_tab_names">
         <item name="timeline">oś czasu</item>
     </string-array>
