--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,7 @@
         <item name="timeline">oś czasu</item>
     </string-array>
     <string name="scanning">Scanning</string>
+    <string name="code_cannot_start_with_hash">Błąd odczytu: kod nie może zaczynać się od znaku \'#\'</string>
+    <string name="incorrect_item_code">Nieprawidłowy kod produktu</string>
+    <string name="incorrect_location_code">Nieprawidłowy kod lokalizacji</string>
 </resources>
